src/test/deca/context/invalid/ifThenElse/undeclared_variable_if.deca
// Description:
//    Test usage of undeclared variable in if-then-else.
//    Test rule 3.28
//
// [Begin Result]
//undeclared_variable_if.deca:15:8: Undeclared identifier z. Rule 0.1.
// [End Result]
//
// History:
//    créé le 06/01/2025

{
    boolean cond = true;
    if (cond) {
        z = 5; // Variable 'z' non déclarée
    } else {
        print("Branche else valide");
    }
}
